--- a/app/src/main/res/drawable/ic_profile.xml
+++ b/app/src/main/res/drawable/ic_profile.xml
@@ -1,12 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="15dp"
-    android:height="15dp"
-    android:viewportWidth="25"
-    android:viewportHeight="25">
+    android:width="18dp"
+    android:height="20dp"
+    android:viewportWidth="18"
+    android:viewportHeight="20">
   <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M12.5,0C5.6,0 0,5.6 0,12.5S5.6,25 12.5,25S25,19.4 25,12.5S19.4,0 12.5,0zM20.82,17.08c-0.36,0.64 -1.23,0.69 -1.69,0.12c-1.55,-1.95 -3.94,-3.2 -6.63,-3.2c-2.69,0 -5.07,1.25 -6.63,3.2c-0.46,0.57 -1.33,0.53 -1.69,-0.12C3.43,15.72 3,14.17 3,12.51C2.99,7.45 7.16,3.15 12.22,3C17.59,2.85 22,7.17 22,12.5C22,14.16 21.57,15.72 20.82,17.08z"/>
+      android:pathData="M3.375,5.556a5.625,5.556 0,1 0,11.25 0a5.625,5.556 0,1 0,-11.25 0z"
+      android:strokeAlpha="0.4"
+      android:fillColor="#00d0d4"
+      android:fillAlpha="0.4"/>
   <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M12.5,9m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"/>
+      android:pathData="M17.99,16.675h0a1.854,1.854 0,0 0,0 -0.237,2.143 2.143,0 0,0 -0.244,-0.84C17.2,14.533 15.666,14.045 14.387,13.771A18.877,18.877 0,0 0,11.614 13.406L10.637,13.333L7.357,13.333L6.38,13.406A18.877,18.877 0,0 0,3.607 13.771C2.328,14.009 0.795,14.502 0.248,15.598A2.143,2.143 0,0 0,0 16.438a1.854,1.854 0,0 0,0 0.237L0,16.675A2.007,2.007 0,0 0,0 16.913a2.146,2.146 0,0 0,0.254 0.831C0.8,18.812 2.338,19.296 3.617,19.57A21.707,21.707 0,0 0,6.39 19.933l0.976,0.064h3.281l0.976,-0.064A21.707,21.707 0,0 0,14.4 19.57c1.279,-0.247 2.812,-0.731 3.359,-1.826A2.368,2.368 0,0 0,18 16.895,1.786 1.786,0 0,0 17.99,16.675Z"
+      android:fillColor="#00d0d4"/>
 </vector>
