--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -53,7 +53,7 @@
                             android:layout_width="56dp"
                             android:layout_height="56dp"
                             android:layout_centerInParent="true"
-                            android:src="@drawable/profile_place_holder"
+                            android:src="@drawable/ic_profile"
                             app:civ_border_color="@color/white"
                             app:civ_border_width="2dp" />
 
