--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -171,7 +171,7 @@
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
                                 android:layout_marginEnd="12dp"
-                                android:src="@drawable/profile_place_holder" />
+                                android:src="@drawable/ic_profile" />
 
                             <!-- layout name and profession of author -->
                             <LinearLayout
