--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -51,7 +51,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:font='@{"sans"}'
                 android:text="easy communication"
                 android:textColor="@color/blue"
@@ -61,13 +61,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="54dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="54dp"
                 android:font='@{"sans"}'
                 android:gravity="center"
                 android:text="offers free, fast, easy and secure communication via text messages and voice call."
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
@@ -91,7 +91,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:font='@{"sans"}'
                 android:text="حساب خود را فعال کنید"
                 android:textColor="@color/blue"
@@ -103,12 +103,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="54dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="54dp"
                 android:font='@{"sans"}'
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/txt_banner_activation_code_wrong_number"
@@ -121,7 +121,7 @@
                 android:gravity="center"
                 android:text="@string/wrong_number"
                 android:textColor="@color/gray"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
@@ -146,7 +146,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="38dp"
+                android:layout_marginTop="24dp"
                 android:font='@{"sans"}'
                 android:text="پروفایل خود را تکمیل کنید"
                 android:textColor="@color/blue"
@@ -156,13 +156,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="54dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="54dp"
                 android:font='@{"sans"}'
                 android:gravity="center"
                 android:text="لطفا اطلاعات خود را در باکس های زیر وارد کنید"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
         </LinearLayout>
 
         <ScrollView
@@ -197,10 +197,9 @@
                         android:layout_centerInParent="true"
                         android:background="@drawable/background_bottom_sheet"
                         android:orientation="vertical"
-                        android:paddingStart="20dp"
+                        android:paddingStart="26dp"
                         android:paddingTop="32dp"
-                        android:paddingEnd="20dp"
-                        android:paddingBottom="24dp"
+                        android:paddingEnd="26dp"
                         android:visibility="visible">
 
                         <!-- text view description -->
@@ -210,11 +209,11 @@
                             android:layout_gravity="center"
                             android:font='@{"sans"}'
                             android:gravity="center"
-                            android:paddingStart="56dp"
-                            android:paddingEnd="56dp"
+                            android:paddingStart="57dp"
+                            android:paddingEnd="57dp"
                             android:text="@string/login_description"
                             android:textColor="@color/text_dark_gray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <!-- change language -->
                         <com.google.android.material.textfield.TextInputLayout
@@ -342,14 +341,14 @@
                             style="@style/Widget.MaterialComponents.Button.TextButton"
                             android:layout_width="match_parent"
                             android:layout_height="58dp"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginBottom="4dp"
                             android:elevation="-5dp"
                             android:font='@{"sans"}'
                             android:text="@string/next"
+                            android:textSize="16sp"
                             android:textColor="@color/white"
                             app:backgroundTint="@color/blue"
                             app:cornerRadius="10dp"
+                            android:layout_marginBottom="8dp"
                             app:elevation="-5dp" />
 
                     </LinearLayout>
@@ -373,10 +372,9 @@
                         android:layout_centerInParent="true"
                         android:background="@drawable/background_bottom_sheet"
                         android:orientation="vertical"
-                        android:paddingStart="20dp"
+                        android:paddingStart="26dp"
                         android:paddingTop="32dp"
-                        android:paddingEnd="20dp"
-                        android:paddingBottom="24dp"
+                        android:paddingEnd="26dp"
                         android:visibility="visible">
 
                         <!-- text view description -->
@@ -387,8 +385,8 @@
                             android:layout_gravity="center"
                             android:font='@{"sans"}'
                             android:gravity="center"
-                            android:paddingStart="40dp"
-                            android:paddingEnd="40dp"
+                            android:paddingStart="57dp"
+                            android:paddingEnd="57dp"
                             android:textColor="@color/text_dark_gray"
                             android:textSize="16sp" />
 
@@ -435,7 +433,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_gravity="center"
-                            android:layout_marginTop="8dp"
+                            android:layout_marginTop="4dp"
                             android:gravity="center"
                             android:maxLines="1"
                             app:boxBackgroundColor="@color/text_back_gray"
@@ -472,7 +470,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="58dp"
                             android:layout_marginTop="4dp"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="8dp"
                             android:elevation="-5dp"
                             android:font='@{"sans"}'
                             android:text="@string/activate"
@@ -506,7 +504,6 @@
                         android:paddingStart="20dp"
                         android:paddingTop="32dp"
                         android:paddingEnd="20dp"
-                        android:paddingBottom="24dp"
                         android:visibility="visible">
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -663,7 +660,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="58dp"
                             android:layout_marginTop="4dp"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="8dp"
                             android:elevation="-5dp"
                             android:font='@{"sans"}'
                             android:text="@string/register"
