--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -286,10 +286,8 @@
                                     android:layout_width="58dp"
                                     android:layout_height="58dp"
                                     android:background="@null"
-                                    android:focusable="false"
-                                    android:focusableInTouchMode="false"
                                     android:font='@{"sans"}'
-                                    android:inputType="number"
+                                    android:inputType="text"
                                     android:text="+98"
                                     android:textColor="@color/dark_gray"
                                     android:textSize="16sp" />
@@ -328,7 +326,7 @@
                                     android:background="@null"
                                     android:font='@{"sans"}'
                                     android:inputType="phone"
-                                    android:textColor="@color/gray"
+                                    android:textColor="@color/dark_gray"
                                     android:textSize="16sp" />
 
                             </com.google.android.material.textfield.TextInputLayout>
