--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,30 +9,29 @@
         android:background="@color/white">
 
         <ScrollView
-            android:fillViewport="true"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingEnd="18dp"
+                android:orientation="vertical"
                 android:paddingStart="18dp"
-                android:orientation="vertical">
+                android:paddingEnd="18dp">
 
                 <!-- section banners -->
                 <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
-                    android:layout_width="match_parent"
-                    app:cardCornerRadius="10dp"
                     app:cardBackgroundColor="@color/border_gray"
-                    >
+                    app:cardCornerRadius="10dp">
 
                     <com.smarteist.autoimageslider.SliderView
                         android:id="@+id/imageSlider"
-                        android:layout_height="164dp"
                         android:layout_width="match_parent"
+                        android:layout_height="164dp"
                         app:sliderAnimationDuration="600"
                         app:sliderAutoCycleDirection="back_and_forth"
                         app:sliderAutoCycleEnabled="true"
@@ -54,6 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -65,44 +65,72 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
+                            android:font='@{"sans"}'
+                            android:text="@string/activities_chart"
                             android:textColor="@color/text_dark_gray"
                             android:textSize="14sp"
-                            android:textStyle="bold"
-                            android:font='@{"sans"}'
-                            android:text="@string/activities_chart"/>
+                            android:textStyle="bold" />
+
+
+<!--                        <com.google.android.material.textfield.TextInputLayout-->
+<!--                            android:id="@+id/txt_layout_period_spinner"-->
+<!--                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_alignParentRight="true"-->
+<!--                            android:layout_marginTop="7dp"-->
+<!--                            android:layoutDirection="rtl"-->
+<!--                            android:maxLines="1"-->
+<!--                            app:boxBackgroundColor="@color/text_back_gray"-->
+<!--                            app:boxBackgroundMode="outline"-->
+<!--                            app:boxCornerRadiusBottomEnd="10dp"-->
+<!--                            app:boxCornerRadiusBottomStart="10dp"-->
+<!--                            android:layout_alignParentStart="true"-->
+<!--                            android:layout_centerVertical="true"-->
+<!--                            app:boxCornerRadiusTopEnd="10dp"-->
+<!--                            app:boxCornerRadiusTopStart="10dp"-->
+<!--                            app:boxStrokeColor="@color/white"-->
+<!--                            app:boxStrokeWidth="0dp"-->
+<!--                            app:endIconDrawable="@drawable/ic_arrow_back"-->
+<!--                            app:errorEnabled="true"-->
+<!--                            app:errorIconDrawable="@null"-->
+<!--                            app:errorTextColor="@color/red"-->
+<!--                            app:hintTextColor="@color/gray"-->
+<!--                            >-->
+
+
+<!--                        </com.google.android.material.textfield.TextInputLayout>-->
 
                         <!-- spinner select month -->
                         <LinearLayout
+                            android:id="@+id/lay_period_spinner"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/button_background_light_gray"
-                            android:gravity="center_vertical"
                             android:layout_alignParentStart="true"
                             android:layout_centerVertical="true"
+                            android:background="@drawable/button_background_light_gray"
+                            android:gravity="center_vertical"
                             android:orientation="horizontal"
-                            android:paddingStart="8sp"
-                            android:paddingEnd="12dp"
-                            android:paddingTop="12dp"
-                            android:paddingBottom="8dp"
                             >
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_arrow_back"
+                                android:layout_marginStart="12dp"
                                 android:rotation="-90"
-                                android:tint="@color/text_dark_gray"
-                                android:layout_marginEnd="8dp"
-                                android:layout_marginStart="8dp"
-                                />
+                                android:src="@drawable/ic_arrow_back"
+                                android:tint="@color/text_dark_gray" />
 
-                            <TextView
+                            <Spinner
+                                android:id="@+id/input_period_spinner"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/month"
-                                android:font='@{"sans"}'
-                                android:textColor="@color/dark_gray"
-                                />
+                                android:layout_height="58dp"
+                                android:gravity="center"
+                                android:background="@null"
+                                android:focusable="false"
+                                android:focusableInTouchMode="false"
+                                android:textColor="@color/gray"
+                                android:textSize="16sp" />
 
                         </LinearLayout>
 
@@ -112,8 +140,7 @@
                         android:id="@+id/chart1"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:layout_marginTop="24dp"
-                        />
+                        android:layout_marginTop="24dp" />
                 </LinearLayout>
 
                 <!-- section latest posts -->
@@ -133,39 +160,38 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
+                            android:font='@{"sans"}'
+                            android:text="@string/latest_posts"
                             android:textColor="@color/text_dark_gray"
                             android:textSize="14sp"
-                            android:textStyle="bold"
-                            android:font='@{"sans"}'
-                            android:text="@string/latest_posts"/>
+                            android:textStyle="bold" />
 
                         <!-- show all -->
                         <TextView
                             android:id="@+id/txt_latest_posts_show_all"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/show_all"
                             android:font='@{"sans"}'
-                            android:textColor="@color/gray"
-                            />
+                            android:text="@string/show_all"
+                            android:textColor="@color/gray" />
 
 
                     </RelativeLayout>
 
                     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                         android:id="@+id/prg_latest_posts"
+                        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:indeterminate="true"
-                        app:mpb_progressStyle="horizontal"
                         android:visibility="gone"
-                        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
+                        app:mpb_progressStyle="horizontal" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_latest_posts"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/rv_latest_posts"
-                        android:layout_marginTop="20dp"/>
+                        android:layout_marginTop="20dp" />
 
                 </LinearLayout>
 
@@ -176,12 +202,12 @@
 
         <!-- progress bar layout-->
         <RelativeLayout
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:alpha="0.6"
             android:background="@drawable/background_busy"
             android:clickable="true"
-            android:id="@+id/progress_bar"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
             android:padding="25dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -190,9 +216,9 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ProgressBar
-                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_centerInParent="true" />
         </RelativeLayout>
 
     </RelativeLayout>
