--- a/app/src/main/res/layout/fragment_vaziate_roohi.xml
+++ b/app/src/main/res/layout/fragment_vaziate_roohi.xml
@@ -44,36 +44,34 @@
 
                         <!-- spinner select month -->
                         <LinearLayout
+                            android:id="@+id/lay_period_spinner"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/button_background_light_gray"
-                            android:gravity="center_vertical"
                             android:layout_alignParentStart="true"
                             android:layout_centerVertical="true"
+                            android:background="@drawable/button_background_light_gray"
+                            android:gravity="center_vertical"
                             android:orientation="horizontal"
-                            android:paddingStart="8sp"
-                            android:paddingEnd="12dp"
-                            android:paddingTop="12dp"
-                            android:paddingBottom="8dp"
                             >
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_arrow_back"
+                                android:layout_marginStart="12dp"
                                 android:rotation="-90"
-                                android:tint="@color/text_dark_gray"
-                                android:layout_marginEnd="8dp"
-                                android:layout_marginStart="8dp"
-                                />
+                                android:src="@drawable/ic_arrow_back"
+                                android:tint="@color/text_dark_gray" />
 
-                            <TextView
+                            <Spinner
+                                android:id="@+id/input_period_spinner"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/month"
-                                android:font='@{"sans"}'
-                                android:textColor="@color/dark_gray"
-                                />
+                                android:layout_height="58dp"
+                                android:gravity="center"
+                                android:background="@null"
+                                android:focusable="false"
+                                android:focusableInTouchMode="false"
+                                android:textColor="@color/gray"
+                                android:textSize="16sp" />
 
                         </LinearLayout>
 
