some bugs fixed

--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -51,4 +51,11 @@
         android:label="@string/mood_status"
         tools:layout="@layout/fragment_vaziate_roohi"/>
 
+    <fragment
+        android:id="@+id/notificationsScreen"
+        android:name="com.mindology.app.ui.main.notifications.NotificationsFragment"
+        android:label="@string/notifications"
+        tools:layout="@layout/fragment_notifications"/>
+
+
 </navigation>
