--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="text_dark_gray">#232126</color>
     <color name="text_blue">#22326e</color>
     <color name="border_gray">#f6f6f8</color>
+    <color name="notif_back">#f6f7fb</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#fff</color>
 
 
